--- a/app/voice/index.html
+++ b/app/voice/index.html
@@ -52,7 +52,7 @@
       <button type="button" class="btn btn-primary btn-lg hysk-btn" value="play:question1">{{startText}}</button>
       <button type="button" class="btn btn-primary btn-lg hysk-btn" name="previous" value="previous"></button>
       <button type="button" class="btn btn-primary btn-lg hysk-btn" name="next" value="next"></button>
-      <button onclick="fullScreen()" id = 'fullscreen_btn hysk-btn' class="btn btn-primary btn-lg">{{fullScreen}}</button>
+      <button onclick="fullScreen()" id = 'fullscreen_btn' class="btn btn-primary btn-lg  hysk-btn">{{fullScreen}}</button>
     </div>
   </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
