--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
           </ul>
         </div>
         <div class="classroom_div">
-         <label hidden="true">教室编号:</label><input id='classroom_number' type="number"  value="1"></input></div>
+         <label hidden="true">教室编号:</label><input id='classroom_number' type="number"  value="1" hidden="true"></input></div>
          </div>
         <div id="hysk_module_div" hidden="true">
         <div><a href="/study"><button type="button" class="btn btn-primary btn-lg" value="play">学一学 (Learn to Speak)</button></a></div>
