fix small things

--- a/app/player/index.html
+++ b/app/player/index.html
@@ -20,7 +20,7 @@
     </div>
 
 
-    <video width="400" controls id='myplayer'>
+    <video width="400" controls id='myplayer' preload="auto">
     <source src="" type="video/mp4">
 
     Your browser does not support HTML5 video.
