add room number

--- a/app/dialog/index.html
+++ b/app/dialog/index.html
@@ -64,7 +64,7 @@
     <script type="text/javascript">
       var app = angular.module('myApp', []);
       app.controller('myCtrl', function($scope, $http) {
-          if(sessionStorage.getItem('lang_name') == 'chinese') {
+          if(sessionStorage.getItem('lang_name') == 'english') {
             $scope.startText= "开始视频";
             $scope.fullScreen= "全屏";
           }
