--- a/app/index.html
+++ b/app/index.html
@@ -72,9 +72,9 @@
         <div><a href="/ftest"><button type="button" class="btn btn-primary btn-lg" value="replay">考一考 (Test your studying)</button></a></div>
         <div><a href="/player" target="_blank"><button type="button" class="btn btn-danger btn-lg hide">打开播放页面</button></a></div>
         <!-- Button trigger modal -->
-        <div><button id = 'change_scene_btn' type="button" class="btn btn-primary btn-lg" data-toggle="modal" >切换场景</button></div>
+        <div><button id = 'change_scene_btn' type="button" class="btn btn-primary btn-lg" data-toggle="modal" >切换场景 (Change scene)</button></div>
         <div><button type="button" class="btn btn-danger btn-lg hide" data-toggle="modal" data-target="#myModal">配置</button></div>
-        <div> <button onclick="fullScreen()" id = 'fullscreen_btn' class="btn btn-primary btn-lg">全屏</button></div>
+        <div> <button onclick="fullScreen()" id = 'fullscreen_btn' class="btn btn-primary btn-lg">全屏 (Full Screen)</button></div>
         </div>
       </div>
     </div>
