--- a/app/index.html
+++ b/app/index.html
@@ -35,15 +35,15 @@
       </div>
       <div id="scene_selections_english_div" hidden="true" class="scene_selections_div">
         <div class="dropdown">
-          <button class="btn btn-primary dropdown-toggle btn btn-primary btn-lg" type="button" data-toggle="dropdown">Choose Scene
+          <button class="btn btn-primary dropdown-toggle btn btn-primary btn-lg" type="button" data-toggle="dropdown">场景选择
          </button>
           <ul class="dropdown-menu"  class="scene_selector_ul" id ='scene_selector_ul_english'>
-            <li data-value="store_english"><a href="#">Store</a></li>
-            <li data-value="store_english_bengci"><a href="#">Store(bengci)</a></li>
-            <li data-value="restaurant_english"><a href="#">Restaurant</a></li>
-            <li data-value="restaurant_english_bengci"><a href="#">Restaurant(bengci）</a></li>
-            <li data-value="wenlu_english"><a href="#">Ask the way</a></li>
-            <li data-value="wenlu_english_bengci"><a href="#">Ask the way(bengci）</a></li>
+            <li data-value="store_english"><a href="#">商店</a></li>
+            <li data-value="store_english_bengci"><a href="#">商店（蹦词版）</a></li>
+            <li data-value="restaurant_english"><a href="#">餐馆</a></li>
+            <li data-value="restaurant_english_bengci"><a href="#">餐馆 （蹦词版）</a></li>
+            <li data-value="wenlu_english"><a href="#">问路</a></li>
+            <li data-value="wenlu_english_bengci"><a href="#">问路 （蹦词版）</a></li>
           </ul>
         </div>
         <div class="classroom_div">
@@ -51,15 +51,16 @@
          </div>
       <div id="scene_selections_chinese_div" hidden="true" class="scene_selections_div">
         <div class="dropdown">
-          <button class="btn btn-primary dropdown-toggle btn btn-primary btn-lg" type="button" data-toggle="dropdown">场景选择
+          <button class="btn btn-primary dropdown-toggle btn btn-primary btn-lg" type="button" data-toggle="dropdown">Choose Scene
          </button>
           <ul class="dropdown-menu" class="scene_selector_ul" id ='scene_selector_ul_chinese'>
-            <li data-value="store_chinese"><a href="#">商店</a></li>
-            <li data-value="store_chinese_bengci"><a href="#">商店（蹦词版）</a></li>
-            <li data-value="restaurant_chinese"><a href="#">餐馆</a></li>
-            <li data-value="restaurant_chinese_bengci"><a href="#">餐馆 （蹦词版）</a></li>
-            <li data-value="wenlu_chinese"><a href="#">问路</a></li>
-            <li data-value="wenlu_chinese_bengci"><a href="#">问路 （蹦词版）</a></li>
+            <li data-value="store_chinese"><a href="#">Store</a></li>
+            <li data-value="store_chinese_bengci"><a href="#">Store(word)</a></li>
+            <li data-value="restaurant_chinese"><a href="#">Restaurant</a></li>
+            <li data-value="restaurant_chinese_bengci"><a href="#">Restaurant(word)</a></li>
+            <li data-value="wenlu_chinese"><a href="#">Greeting</a></li>
+            <li data-value="wenlu_chinese_bengci"><a href="#">Greeting (word)</a></li>
+
           </ul>
         </div>
         <div class="classroom_div">
